@@ -21,6 +21,7 @@ Version 3.4.5 (2011-09-01)
 	Fixed bug where the nonbreaking_force_tab option in the nonbreaking plugin wouldn't work on Gecko/WebKit.
 	Fixed bug where the isDirty state would become true on non IE browsers if there was an table at the end of the contents.
 	Fixed bug where entities wasn't properly encoded on WebKit when pasting text as plain text.
+	Fixed issue where the plaintext_mode and plaintext_mode_sticky language keys where swapped.
 Version 3.4.4 (2011-08-04)
 	Added new html5 audio support. Patch contributed by Ronald M. Clifford.
 	Added mute option for video elements and preload options for video/audio patch contributed by Dmitry Kalinkin.
